# SagmoWhisper

./: .env.example  .gitignore  LICENSE  README.md  README.pt-BR.md  SagmoWhisper.py  install-linux.sh  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
assets/: SagmoWhisper.icns
docs/: STATUS.md
docs/superpowers/plans/: 2026-06-23-waveform-overlay.md  2026-07-02-milestone-1-fundacao.md  2026-07-02-milestone-2-providers-settings.md  2026-07-02-milestone-3-app-bundle.md  2026-07-02-orb-overlay.md
docs/superpowers/specs/: 2026-06-23-waveform-overlay-design.md  2026-07-02-m3-app-bundle-design.md  2026-07-02-sagmowhisper-public-design.md
src/: app.py  audio_recorder.py  bar_color.py  cleaner.py  config.py  hotkey.py  pipeline.py  text_injector.py  transcriber.py  waveform_overlay.py
src/core/: app_logging.py  audio_level.py  config.py  login_item.py  orb_animation.py  secrets.py  single_instance.py
src/core/providers/: base.py  factory.py  groq_provider.py  local_provider.py  openai_provider.py
src/linux/: app.py  cli.py  login_service.py  session_check.py  setup_wizard.py
src/macos/: orb_overlay.py  settings_window.py
tests/: test_audio_recorder_callback.py  test_audio_recorder_stop_race.py  test_bar_color.py  test_cleaner.py  test_cleanup_live.py  test_config.py  test_hotkey.py  test_pipeline.py  test_text_injector.py  test_transcriber.py
tests/core/: test_app_logging.py  test_audio_level.py  test_config.py  test_login_item.py  test_orb_animation.py  test_secrets.py  test_single_instance.py
tests/core/providers/: test_base.py  test_factory.py  test_groq_provider.py  test_local_provider.py  test_openai_provider.py
tests/linux/: test_cli.py  test_linux_app.py  test_login_service.py  test_session_check.py  test_setup_wizard.py  test_x11_integration.py
