[project]
name = "sagmowhisper"
version = "0.1.0"
description = "Ditado por voz global no Mac: F8 -> Groq Whisper -> cola no cursor"
requires-python = ">=3.11"

[project.optional-dependencies]
local = ["faster-whisper"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 4

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
