[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sagmowhisper"
version = "0.1.0"
description = "Ditado por voz global: F8 -> Whisper -> cola no cursor (macOS e Ubuntu)"
requires-python = ">=3.11"
dependencies = [
    "groq",
    "openai",
    "sounddevice",
    "soundfile",
    "numpy",
    "pynput",
    "pyperclip",
    "python-dotenv",
    "keyring",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.optional-dependencies]
local = ["faster-whisper"]

[project.scripts]
sagmowhisper = "src.linux.cli:main"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 4

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
